Increase PermGen size to 256 MB